[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/shop/shop.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/store_ui.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/upgrades/Bouncy.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/upgrades/thumbnail_Aerodynamics.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/upgrades/thumbnail_Lightweight Design.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/upgrades/Increased Launch Power.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/upgrades/Steering.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/Anonymous.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 9 )

[node name="shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -270.0
margin_right = 270.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="_"]
margin_right = 268.0
margin_bottom = 540.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="_/VBoxContainer3"]
margin_right = 268.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="_/VBoxContainer3"]
margin_top = 181.0
margin_right = 268.0
margin_bottom = 358.0
size_flags_vertical = 3

[node name="Button3" type="Button" parent="_/VBoxContainer3"]
margin_top = 362.0
margin_right = 268.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="_"]
margin_left = 272.0
margin_right = 540.0
margin_bottom = 540.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="_/VBoxContainer2"]
margin_right = 268.0
margin_bottom = 177.0
size_flags_vertical = 3

[node name="Button2" type="Button" parent="_/VBoxContainer2"]
margin_top = 181.0
margin_right = 268.0
margin_bottom = 358.0
size_flags_vertical = 3

[node name="Button3" type="Button" parent="_/VBoxContainer2"]
margin_top = 362.0
margin_right = 268.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -59.0
custom_fonts/font = SubResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_amount" type="RichTextLabel" parent="."]
margin_left = 109.0
margin_top = 513.061
margin_right = 475.0
margin_bottom = 601.061
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "eargdrgdsrg"
visible_characters = 8
text = "eargdrgdsrg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up_grade_btns" type="Node" parent="."]

[node name="bounce" type="TextureButton" parent="up_grade_btns"]
margin_left = 596.0
margin_top = 57.1122
margin_right = 847.0
margin_bottom = 308.112
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="increased launch power" type="TextureButton" parent="up_grade_btns"]
margin_left = 946.674
margin_top = 60.8878
margin_right = 1197.67
margin_bottom = 311.888
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="steering" type="TextureButton" parent="up_grade_btns"]
margin_left = 1295.0
margin_top = 56.6325
margin_right = 1546.0
margin_bottom = 307.633
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aerodynamic" type="TextureButton" parent="up_grade_btns"]
margin_left = 597.888
margin_top = 390.764
margin_right = 848.888
margin_bottom = 641.764
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lightweight" type="TextureButton" parent="up_grade_btns"]
margin_left = 944.334
margin_top = 388.876
margin_right = 1195.33
margin_bottom = 639.876
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="up_grade_btns/bounce" to="." method="_on_bounce_pressed"]
[connection signal="pressed" from="up_grade_btns/increased launch power" to="." method="_on_increased_launch_power_pressed"]
[connection signal="pressed" from="up_grade_btns/steering" to="." method="_on_steering_pressed"]
[connection signal="pressed" from="up_grade_btns/aerodynamic" to="." method="_on_aerodynamic_pressed"]
[connection signal="pressed" from="up_grade_btns/lightweight" to="." method="_on_lightweight_pressed"]
